# plataforma-ops

./: .gitignore  BACKLOG.md  CHANGELOG.md  MANUAL_USUARIO.md  README.md  deploy.sh  requirements.txt
backend/: .env.example  alembic.ini  railway.json  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 3beb540e8c96_create_sellers.py  a1b2c3d4e5f6_rename_analista_senior_to_supervisor.py  aebf175eabcb_create_crud_operations_and_rows.py  b2c3d4e5f6a7_add_marketplace_fields_to_sellers.py  c3d4e5f6a7b8_add_marketplace_seller_id.py  d7e8f9a0b1c2_add_integracion_specs.py  ed150c691172_create_users_and_refresh_tokens.py  f1a2b3c4d5e6_create_eventos.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/crud_medios/: excel_export.py  models.py  router.py  schemas.py  service.py  vtex_client.py
backend/app/modules/eventos/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_crud_service.py
deploy/: plataforma-backend.service  plataforma-ops.nginx  setup-server.sh
frontend/: .env.development  .env.example  .env.production  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/pages/: ConfiguracionPage.jsx  Dashboard.jsx  Login.jsx
(+43 files in other folders)
